src/test/deca/lexique/valid/AssignInt.deca
// DESCRIPTION : Affectation d'un int à une variable
{
    int i;
    i = 4;
}
