src/test/deca/lexique/invalid/accent_interdit.deca
// DESCRIPTION : utlisation d'un accent que daca ne reconnait pas
//RESULTAT: 4:1: Character entered is illegal !

{
 é;
}
